--- a/style.css
+++ b/style.css
@@ -636,10 +636,11 @@ footer {
     filter: none !important;
     border: inherit !important;
   }
+}
 
 .ativo {
   transform: scale(0.97);
   filter: brightness(1.2);
   box-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
-  transition: transform 0.1s, filter 0.1s, box-shadow 0.1s;
-}
+  transition: transform 0.1s, filter 0.1s, box-shadow 0.1s; /* <- AQUI TÁ CERTO */
+} /* <- VOCÊ DEVE GARANTIR QUE TENHA ESSA CHAVE */
