--- a/style.css
+++ b/style.css
@@ -498,6 +498,14 @@ footer {
   }
 }
 
+.fade-in {
+  animation: fadeSlideIn 0.4s ease forwards;
+}
+
+.fade-out {
+  animation: fadeSlideOut 0.4s ease forwards;
+}
+
 .email-texto {
   display: inline-block;
   transition: none; /* a gente vai usar keyframes agora */
@@ -535,6 +543,4 @@ footer {
 .ativo {
   transform: scale(0.97);
   filter: brightness(1.2);
-  box-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
-  transition: transform 0.1s, filter 0.1s, box-shadow 0.1s;
 }
